# ray-debug

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: asynchronous.rs  lib.rs  meta.rs  origin.rs  ray_color.rs  ray_request.rs  rayable.rs
src/helpers/: mod.rs
src/payloads/: color_payload.rs  html_payload.rs  log_payload.rs  mod.rs  payload.rs
src/tests/: meta_test.rs  mod.rs  origin_test.rs  ray_request_test.rs  rayable_test.rs
src/tests/helpers/: mod.rs
src/tests/integration/: asynchronous_test.rs  mod.rs  synchronous_test.rs
