[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.3", features = ["v4"]}
backtrace = "0.3"
gethostname = "0.4"
rustc_version = "0.4.0"
reqwest = { version = "0.11", features = ["json", "blocking"]}

[dev-dependencies]
tokio = { version = "1.26", features = ["macros"] }