[package]
name = "ray-debug"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/larsmbergvall/ray-debug"
keywords = ["debug", "ray"]
categories = ["development-tools"]
license = "MIT"
description = "Rust adapter for the Spatie Ray debugging tool (https://spatie.be/products/ray)"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.3", features = ["v4"]}
backtrace = "0.3"
gethostname = "0.4"
rustc_version = "0.4.0"
reqwest = { version = "0.11", features = ["json", "blocking"]}
maud = "0.24"

[dev-dependencies]
tokio = { version = "1.26", features = ["macros"] }